--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mjdpuzzle",
   "engines": {
-    "node": "0.10.30",
+    "node": ">=0.10.40",
     "npm": "1.4.21"
   },
   "private": true,
@@ -9,12 +9,12 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "sails": "~0.11.0",
+    "sails": "0.12.0-rc3",
     "sails-mongo": "0.11.2",
     "connect-mongo": "~0.4.1",
     "rc": "~0.5.0",
     "include-all": "~0.1.3",
-    "ejs": "~0.8.4",
+    "ejs": "2.3.4",
     "grunt": "0.4.2",
     "grunt-sync": "~0.0.4",
     "grunt-contrib-copy": "~0.5.0",
